:rocket: Country service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,18 @@
 {
     "cSpell.words": [
+        "codigo",
         "Creacion",
         "documentacion",
+        "dtos",
         "Logueado",
         "mariadb",
+        "Modificacion",
         "myeagledev",
         "myeagledeverpapi",
         "nestjs",
+        "pais",
+        "Pais",
+        "paises",
         "typeorm"
     ]
 }
